--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,10 @@
 *.pdf
 secret.h
+.pioenvs
+.piolibdeps
+.clang_complete
+.gcc-flags.json
+.pio
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
