--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,10 @@ secret.h
 .clang_complete
 .gcc-flags.json
 .pio
+.vscode/.browse.c_cpp.db*
+.vscode/c_cpp_properties.json
+.vscode/launch.json
+.vscode/ipch
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
